--- a/CSS/style.css
+++ b/CSS/style.css
@@ -427,7 +427,7 @@ a,a:hover{
 
 .footer-section .copyright{
 /*	margin:30px auto;*/
-	color: #A0A0A0;
+	color: #606060;
 	text-align: center;
          margin-top: 25px;
 	
